[tool.poetry]
name = "telegram-music-forwarder-bot"
version = "0.1.0"
description = "A Telegram bot for forwarding audio messages in topics"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
